syntax = "proto3";

service CallTarget {
    rpc callTarget (CallTargetPayload) returns (CallTargetResponse) {}
}

message CallTargetPayload {
    int64 recordOffset = 1;
    int64 recordTimestamp = 2;
    string msgJson = 3;
}

message CallTargetResponse {
    int32 statusCode = 1;
    int64 receivedTimestamp = 2;
    int64 completedTimestamp = 3;
}